Fix typo related to 'probert' in authors.txt.

--- a/data/authors.txt
+++ b/data/authors.txt
@@ -65,7 +65,7 @@ ovidiu = Ovidiu Predescu <ovidiu@gmail.com>
 paullanders = Paul Landers <paul.landers@testplant.com>
 pjb = Pascal J. Bourguignon  <pjb@imaginet.fr>
 portnoy = Stephen Peters <portnoy@portnoy.org>
-probert = Philippe C.D. Robert <probert@siggraph.org>.
+probert = Philippe C.D. Robert <probert@siggraph.org>
 pyr = Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 qmathe = Quentin Mathe <qmathe@club-internet.fr>
 ratmice = Matt Rice <ratmice@gmail.com>
