Fix Riccardo's email address.

--- a/data/authors.txt
+++ b/data/authors.txt
@@ -72,7 +72,7 @@ ratmice = Matt Rice <ratmice@gmail.com>
 rfm = Richard Frith-MacDonald <rfm@gnu.org>
 richard = Richard Frith-MacDonald <rfm@gnu.org>
 rio = Nicolas Roard <nicolas@roard.com>
-rmottola = Riccardo Mottola <rm@gnu.com>
+rmottola = Riccardo Mottola <rm@gnu.org>
 robert = Robert Slover <rjslover@me.com>
 root = root <root>
 schnorr = schnorr <schnorr@gmail.com>
