Fix the name and email of user 'karl'.

--- a/data/authors.txt
+++ b/data/authors.txt
@@ -48,7 +48,7 @@ jbettis = Jeremy Bettis <jeremy@deadbeef.com>
 jdess = James Dessart <skwirl@cam.org>
 jonathanosx = Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
 loic = Loic Dachary <loic@senga.org>
-karl = Karl Berry <karl@gnu.org>
+karl = Karl Kraft <karl@nfox.com>
 ljulliar = Laurent Julliard <laurent@moldus.org>
 lubosd = Luboš Doležel <lubos@dolezel.info>
 ludovic = Ludovic Marcotte <ludovic@Sophos.ca>
